[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ombala"
version = "0.1.0"
description = "SDK em Python para a API de envios de SMS em Angola"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Omar Rodrigues", email = "omarscode007@gmail.com" }
]
keywords = ["sms", "api", "sdk", "angola", "ombala"]
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Telephony",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://www.useombala.ao/"
Repository = "https://github.com/omarscode/ombala"
Documentation = "https://github.com/omarscode/ombala#README"
Tracker = "https://github.com/omarscode/ombala/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ombala"]